# fox-news-aggregator

./: .gitignore  2026-03-04.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  NEWS_UPGRADE_PLAN.md  README.md  generate_daily_news_v1_backup.py  generate_daily_news_v3_backup.py  generate_daily_news_v4.py
frontend/: README.md  app.js  index.html  manifest.json  style.css
news-aggregator/: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
news-aggregator/analysis/: __init__.py  alerts.py  correlation.py  entities.py  portfolio_matcher.py
news-aggregator/config/: ai_sources.py  portfolio.py  sources.py
news-aggregator/core/: __init__.py  cache.py  fetcher.py  health.py  rss.py
news-aggregator/output/: json_exporter.py
news-aggregator/sources/: __init__.py  bilibili_hotword.py  bilibili_popular.py  daily_60s.py  douban.py  douyin_60s.py  epic_60s.py  thepaper.py  toutiao_60s.py  v2ex.py  weibo_60s.py  zhihu_60s.py  zhihu_api.py
news-aggregator/tests/: TEST_RESULTS.md  test_sources.py
