[project]
name = "fox-news-aggregator"
version = "3.0.0"
description = "Fox新闻聚合器 - 插件化架构"
authors = [{name = "Fox", email = "fox@openclaw.ai"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
